--- a/style.css
+++ b/style.css
@@ -1,23 +1,55 @@
-*{  
+/*
+1.Posicionamiento
+2.Modelo de caja (Box model)
+3.Tipografía
+4.Visuales
+5.Otros
+*/
+:root{
+    /*Colores*/
+    --bitcoin-orange:#F7931A;
+    --soft-orange:#FFE9D5;
+    --secondary-blue:#1A9AF7;
+    --soft-blue:#E7F5FF;
+    --warm-black:#201E1C;
+    --black: #282623;
+    --grey: #BABABA;
+    --off-white:#FAF8F7;
+    --just-white:#FFFFFF;
+}
+ 
+*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-html {
-    font-size: 62.5%;
-}
-.logo{
-    display:flex;
-}
-.encabezado {
-    display: flex;
 
+html{
+    font-size: 62.5%;
+    font-family:'DM Sans', sans-serif;
 }
-.navegacion{
-    display: flex;
-    justify-content: space-between;
+header{
+    position:relative;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    min-width: 320px;
+    height: 334px;
+    text-align: center;
 }
-.nav-list{
-    display: flex;
-    justify-content:space-between;
+header img{
+    width: 150px;
+    height: 24px;
+    margin-top: 60px;
+    align-self: center;
+}
+.header--title-container{
+    width: 90%;
+    min-width:288px;
+    max-width: 900px;
+    height: 218px;
+    margin-top: 40px;
+    text-align: center;
+    align-self: center;
 }
