--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ header{
     min-width: 320px;
     height: 334px;
     text-align: center;
+    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);;
+ 
 }
 header img{
     width: 150px;
@@ -52,4 +54,45 @@ header img{
     margin-top: 40px;
     text-align: center;
     align-self: center;
+}
+.header--title-container h1{
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+.header--title-container p{
+    margin-top: 25px;
+    font-size: 1.4rem;
+    font-weight:500;
+    line-height: 1.8rem;
+    color: var(--soft-orange);
+}
+ 
+.header--title-container .header--button{
+    position: absolute;
+    left: calc(50% - 115px);
+    top: 270px;
+    display:block;
+    margin-top: 35px;
+    padding: 15px;
+    width: 229px;
+    height: 48px;
+    background-color: var(--off-white);
+    /*sombra*/
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+    border: none;
+    border-radius: 5px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-decoration:none;
+    color:var(--black);
+}
+
+.header--button span{
+    display: inline-block;
+    width: 13px;
+    height: 13px;
+    margin-left: 10px;
+    background-image: url("./assets/icons/arrow-right.svg");
 }
