--- a/style.css
+++ b/style.css
@@ -92,7 +92,28 @@ header img{
 .header--button span{
     display: inline-block;
     width: 13px;
-    height: 13px;
+    height: 8px;
     margin-left: 10px;
-    background-image: url("./assets/icons/arrow-right.svg");
+    background-image: url("./assets/icons/vector.svg");
+    background-repeat: no-repeat;
+}
+
+main{
+    width: 100%;
+    height:auto;
+    background-color: var(--off-white);
+}
+.main-exchange-container{
+    width: 100%;
+    height: auto;
+    padding-top: 80px;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+.main-exchange-container--title{
+    width: 90%;
+    min-width: 288px;
+    max-width: 900px;
+    margin: 0 auto;
 }
