--- a/style.css
+++ b/style.css
@@ -5,174 +5,224 @@
 4.Visuales
 5.Otros
 */
-:root{
-    /*Colores*/
-    --bitcoin-orange:#F7931A;
-    --soft-orange:#FFE9D5;
-    --secondary-blue:#1A9AF7;
-    --soft-blue:#E7F5FF;
-    --warm-black:#201E1C;
-    --black: #282623;
-    --grey: #BABABA;
-    --off-white:#FAF8F7;
-    --just-white:#FFFFFF;
-}
- 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+:root {
+  /*Colores*/
+  --bitcoin-orange: #f7931a;
+  --soft-orange: #ffe9d5;
+  --secondary-blue: #1a9af7;
+  --soft-blue: #e7f5ff;
+  --warm-black: #201e1c;
+  --black: #282623;
+  --grey: #bababa;
+  --off-white: #faf8f7;
+  --just-white: #ffffff;
 }
 
-html{
-    font-size: 62.5%;
-    font-family:'DM Sans', sans-serif;
-}
-header{
-    position:relative;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    min-width: 320px;
-    height: 334px;
-    text-align: center;
-    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);;
- 
-}
-header img{
-    width: 150px;
-    height: 24px;
-    margin-top: 60px;
-    align-self: center;
-}
-.header--title-container{
-    width: 90%;
-    min-width:288px;
-    max-width: 900px;
-    height: 218px;
-    margin-top: 40px;
-    text-align: center;
-    align-self: center;
-}
-.header--title-container h1{
-    font-size: 2.4rem;
-    font-weight: bold;
-    line-height: 2.6rem;
-    color: var(--just-white);
-}
-.header--title-container p{
-    margin-top: 25px;
-    font-size: 1.4rem;
-    font-weight:500;
-    line-height: 1.8rem;
-    color: var(--soft-orange);
-}
- 
-.header--title-container .header--button{
-    position: absolute;
-    left: calc(50% - 115px);
-    top: 270px;
-    display:block;
-    margin-top: 35px;
-    padding: 15px;
-    width: 229px;
-    height: 48px;
-    background-color: var(--off-white);
-    /*sombra*/
-    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
-    border: none;
-    border-radius: 5px;
-    font-size: 1.4rem;
-    font-weight: bold;
-    text-decoration:none;
-    color:var(--black);
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.header--button span{
-    display: inline-block;
-    width: 13px;
-    height: 8px;
-    margin-left: 10px;
-    background-image: url("./assets/icons/vector.svg");
-    background-repeat: no-repeat;
+html {
+  font-size: 62.5%;
+  font-family: "DM Sans", sans-serif;
+}
+header {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  min-width: 320px;
+  height: 334px;
+  text-align: center;
+  background: linear-gradient(207.8deg, #201e1c 16.69%, #f7931a 100%);
+}
+header img {
+  width: 150px;
+  height: 24px;
+  margin-top: 60px;
+  align-self: center;
+}
+.header--title-container {
+  width: 90%;
+  min-width: 288px;
+  max-width: 900px;
+  height: 218px;
+  margin-top: 40px;
+  text-align: center;
+  align-self: center;
+}
+.header--title-container h1 {
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--just-white);
+}
+.header--title-container p {
+  margin-top: 25px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: var(--soft-orange);
 }
 
-main{
-    width: 100%;
-    height:auto;
-    background-color: var(--off-white);
-}
-.main-exchange-container{
-    width: 100%;
-    height: auto;
-    padding-top: 80px;
-    padding-bottom: 30px;
-    text-align: center;
+.header--title-container .header--button {
+  position: absolute;
+  left: calc(50% - 115px);
+  top: 270px;
+  display: block;
+  margin-top: 35px;
+  padding: 15px;
+  width: 229px;
+  height: 48px;
+  background-color: var(--off-white);
+  /*sombra*/
+  box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+  border: none;
+  border-radius: 5px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: var(--black);
 }
 
-.main-exchange-container--title{
-    width: 90%;
-    min-width: 288px;
-    max-width: 900px;
-    margin: 0 auto;
+.header--button span {
+  display: inline-block;
+  width: 13px;
+  height: 8px;
+  margin-left: 10px;
+  background-image: url("./assets/icons/vector.svg");
+  background-repeat: no-repeat;
+}
+
+main {
+  width: 100%;
+  height: auto;
+  background-color: var(--off-white);
+}
+.main-exchange-container {
+  width: 100%;
+  height: auto;
+  padding-top: 80px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+.main-exchange-container--title {
+  width: 90%;
+  min-width: 288px;
+  max-width: 900px;
+  margin: 0 auto;
 }
 .main-exchange-container .backgroundImg {
-      width:200px;
-      height: 200px;
-      margin: 0 auto;
-      margin-bottom: 50px;
-      background-image:url("./assets/imgs/bitcoin.svg");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  background-image: url("./assets/imgs/bitcoin.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-.main-exchange-container h2{
-    margin-bottom:30px;
-    font-size: 2.4rem;
-    font-weight: bold;
-    line-height: 2.6rem;
-    color: var(--black);
+.main-exchange-container h2 {
+  margin-bottom: 30px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--black);
 }
 
-.main-exchange-container p{
-    margin-bottom: 30px;
-    font-size: 1.4rem;
-    font-weight: 500;
-    line-height: 1.6rem;
-    color:#757575;
+.main-exchange-container p {
+  margin-bottom: 30px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.6rem;
+  color: #757575;
 }
-.main-currency-table{
-    width: 70%;
-    min-width: 235px;
-    max-width: 500px;
-    height: 360px;
-    margin: 0 auto;
-    font-family: "Inter", sans-serif;
+.main-comision-table,
+.main-currency-table {
+  width: 70%;
+  min-width: 235px;
+  max-width: 500px;
+  height: 360px;
+  margin: 0 auto;
+  font-family: "Inter", sans-serif;
 }
-.main-currency-table .currency-table--title{
-margin-bottom:15px;
-font-size: 1.8rem;
-font-weight:bold ;
-line-height:2.3rem;
-color:var(--bitcoin-orange);
+.main-comision-table .comision-table--title,
+.main-currency-table .currency-table--title {
+  margin-bottom: 15px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  line-height: 2.3rem;
+  color: var(--bitcoin-orange);
 }
-.currency-table--container{
-    width: 90%;
-    min-width:230px;
-    max-width: 300px;
-    height:250px;
-    margin: 0 auto;
+.main-comision-table .comision-table--title{
+    color:var(--secondary-blue);
 }
-.currency-table--container table{
-    width: 100%;
-    height: 100%;
+.comision-table--container,
+.currency-table--container {
+  width: 90%;
+  min-width: 230px;
+  max-width: 300px;
+  height: 250px;
+  margin: 0 auto;
 }
-.currency-table--container td{
-    width: 50%;
-    font-size: 1.6rem;
-    font-weight:500 ;
-    line-height: 1.9rem;
-    color: var(--grey);
-    background-color: var(--just-white);
+.comision-table--container table,
+.currency-table--container table {
+  width: 100%;
+  height: 100%;
+}
+.comision-table--container td,
+.currency-table--container td {
+  width: 50%;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1.9rem;
+  color: var(--grey);
+  background-color: var(--just-white);
+}
+.comision-table--container .table__top-left,
+.currency-table--container .table__top-left {
+  border-radius: 15px 0 0 0;
+}
+.comision-table--container .table__top-right,
+.currency-table--container .table__top-right {
+  border-radius: 0 15px 0 0;
+}
+.comision-table--container .table__bottom-right,
+.currency-table--container .table__bottom-right {
+  border-radius: 0 0 15px 0;
+}
+.comision-table--container .table__bottom-left,
+.currency-table--container .table__bottom-left {
+  border-radius: 0 0 0 15px;
+}
+.comision-table--container .table__right,
+.currency-table--container .table__right {
+  font-size: 1.4rem;
+  font-weight: normal;
+  line-height: 1.7rem;
+  color: #757575;
+}
+.currency-table--container .down {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-left: 10px;
+  background-image: url("./assets/icons/trending-down.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.currency-table--container .up {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-left: 10px;
+  background-image: url("./assets/icons/trending-up.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
