finalizando estilos de la tabla

--- a/style.css
+++ b/style.css
@@ -226,3 +226,27 @@ main {
   background-size: cover;
   background-position: center;
 }
+.comision-table--date,
+.currency-table--date{
+width: 190px;
+height: 30px;
+margin: 0 auto;
+margin-top:15px;
+padding: 8px;
+background-color: var(--soft-orange);
+border-radius: 8px;;
+}
+
+.comision-table--date{
+  background-color: var(--soft-blue);
+}
+
+.comision-table--date p,
+.currency-table--date p{
+  
+  font-size: 1.2rem;
+  line-height:1.5rem;
+  color: var(--warm-black);
+  font-weight: 300;
+}
+
