--- a/style.css
+++ b/style.css
@@ -227,26 +227,24 @@ main {
   background-position: center;
 }
 .comision-table--date,
-.currency-table--date{
-width: 190px;
-height: 30px;
-margin: 0 auto;
-margin-top:15px;
-padding: 8px;
-background-color: var(--soft-orange);
-border-radius: 8px;;
+.currency-table--date {
+  width: 190px;
+  height: 30px;
+  margin: 0 auto;
+  margin-top: 15px;
+  padding: 8px;
+  background-color: var(--soft-orange);
+  border-radius: 8px;
 }
 
-.comision-table--date{
+.comision-table--date {
   background-color: var(--soft-blue);
 }
 
 .comision-table--date p,
-.currency-table--date p{
-  
+.currency-table--date p {
   font-size: 1.2rem;
-  line-height:1.5rem;
+  line-height: 1.5rem;
   color: var(--warm-black);
   font-weight: 300;
 }
-
