--- a/style.css
+++ b/style.css
@@ -342,3 +342,12 @@ background-position:center;
   background-position: center;
   background-size: cover;
 }
+.bitcoin-img-container h2{
+  padding: 60px;
+  text-align: center;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color:var(--just-white);
+
+}
