--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 html {
   font-size: 62.5%;
   font-family: "DM Sans", sans-serif;
+  scroll-behavior: smooth;
 }
 header {
   position: relative;
@@ -349,5 +350,32 @@ background-position:center;
   font-weight: bold;
   line-height: 2.6rem;
   color:var(--just-white);
+}
+.main-plans-container{
+  width: 100%;
+  min-width:320px;
+  padding-bottom: 70px;
+  text-align: center;
+}
+.main-plans-container .plans--title{
+width: 90%;
+min-width:288px;
+height: auto;
+margin: 0 auto;
+margin-bottom: 50px;
+}
+.plans--title h2{
+  padding-top:50px ;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height:2.6rem;
+  color: var(--black);
+}
+.plans--title p {
+  padding-top: 30px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: #757575;
 
 }
