--- a/style.css
+++ b/style.css
@@ -377,5 +377,54 @@ margin-bottom: 50px;
   font-weight: 500;
   line-height: 1.8rem;
   color: #757575;
-
+}
+.plans-container--card {
+  position: relative;
+  width: 70%;
+  min-width: 230px;
+  max-width: 300px;
+  height: 250px;
+  margin: 50px auto  0;
+  padding:  0 15px;
+  background-color: var(--just-white);
+  border-radius:15px ;
+  box-shadow:0 4px 8px rgba(89, 73, 30, 0.16);
+}
+.recomendado{
+  position: absolute;
+  left: calc(50% - 60px);
+  font-size: 1.2rem;
+  top: -15px;
+  width: 120px;
+  height: 31px;
+  background-color: var(--bitcoin-orange);
+  color: var(--just-white);
+  border-radius: 5px;
+  padding: 6px;
+}
+.plan-card--title{
+  padding-top: 30px;
+  font-size: 1.4rem;
+  font-weight:500;
+  line-height: 1.8rem;
+  color: black;
+}
+.plan-card--price{
+  position: relative;
+  padding: 5px 0;
+  font-size: 5.2rem;
+  font-weight: bold;
+  line-height: 5.3rem;
+  color: black;
+}
+.plan-card--price span{
+  position: absolute;
+  top: -5px;
+  left: calc(50% - 40px);
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+.plan-card--saving{
+  font-size: 1.2rem;
+  color: #757575;
 }
