--- a/style.css
+++ b/style.css
@@ -428,3 +428,26 @@ margin-bottom: 50px;
   font-size: 1.2rem;
   color: #757575;
 }
+.plan-card--ca{
+  width: 150px;
+  height: 48px;
+  margin-top:20px;
+  background-color:var(--off-white);
+  border: 2px solid var(--bitcoin-orange);
+  font-family: "DM Sans", sans-serif;
+  border-radius: 4px;
+  font-size:1.4rem;
+  font-weight: bold;
+  line-height: 1.8rem;
+  color:var(--black) ;
+}
+.plan-card--ca span{
+  display: inline-block;
+  width: 20px;
+  height:20px;
+  background-image:url("./assets/icons/arrow-right.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  vertical-align: text-bottom;
+}
