realizando scroll horizontal con css

--- a/style.css
+++ b/style.css
@@ -379,13 +379,22 @@ margin-bottom: 50px;
   line-height: 1.8rem;
   color: #757575;
 }
+.plans-container--slider{
+   display: flex;
+   height: 316px;
+   overflow-x: scroll;
+   overscroll-behavior-x:contain;
+   scroll-snap-type: x proximity;
+  margin-right: 20px;
+}
 .plans-container--card, .plans-container--trimestral,.plans-container--mensual {
   position: relative;
+  scroll-snap-align: center;
   width: 70%;
   min-width: 230px;
   max-width: 300px;
   height: 250px;
-  margin: 50px auto  0;
+  margin: 50px 20px  0;
   padding:  0 15px;
   background-color: var(--just-white);
   border-radius:15px ;
@@ -396,6 +405,7 @@ margin-bottom: 50px;
 }
 .plans-container--mensual{
   background-color: var(--bitcoin-orange);
+  
 }
 .recomendado, .plan-trimestral, .plan-mensual{
   position: absolute;
